<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/renameBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:text="@string/rename"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:icon="@drawable/rename_icon"
            app:iconGravity="start"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/deleteBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:icon="@drawable/delete_icon"
            app:iconGravity="start"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/shareBtn"
            app:layout_constraintStart_toStartOf="@+id/renameBtn"
            app:layout_constraintTop_toBottomOf="@+id/renameBtn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/shareBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:text="@string/share"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:icon="@drawable/share_icon"
            app:iconGravity="start"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/infoBtn"
            app:layout_constraintStart_toStartOf="@+id/renameBtn"
            app:layout_constraintTop_toBottomOf="@+id/deleteBtn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/infoBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:text="@string/about"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:icon="@drawable/about_icon"
            app:iconGravity="start"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/renameBtn"
            app:layout_constraintTop_toBottomOf="@+id/shareBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>